Add private submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "weblab_sympy_LaTeX"]
 	path = weblab_sympy_LaTeX
 	url = https://github.com/Tom-van-Woudenberg/weblab_sympy_LaTeX
+[submodule "mapmaker"]
+	path = mapmaker
+	url = https://github.com/Tom-van-Woudenberg/mapmaker
